Fix quiz model answer overflow

--- a/res/css/quiz-1.6.css
+++ b/res/css/quiz-1.6.css
@@ -7,6 +7,7 @@ div.questionText, div.answerText {
     padding: 5px;
     background-color: var(--light-gray);
     max-width: 630px;
+    overflow: auto;
 }
 div.done {
     margin-top: 50px;
